hard-gists/9e1f7cf4945a608ae48a/run.log
=== Docker Run Log for 9e1f7cf4945a608ae48a ===
Started at: Mi 29. Okt 18:41:58 CET 2025

[2025-10-29 18:41:58] START: Running container for 9e1f7cf4945a608ae48a
[2025-10-29 18:41:58] SUCCESS: Container c7d889b0794dbd97ddcc7bf1249e4a3e6f282a2e4c2d2baa8b80b75b0d0ca9b0 started for 9e1f7cf4945a608ae48a
=== Container logs for 9e1f7cf4945a608ae48a ===
  File "/snippet.py", line 104
    print '[+] Address of PEB : ', hex(dbg.peb)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9e1f7cf4945a608ae48a ===
[2025-10-29 18:42:00] INFO: Container c7d889b0794dbd97ddcc7bf1249e4a3e6f282a2e4c2d2baa8b80b75b0d0ca9b0 has stopped
